--- a/source/Irrlicht/CMakeLists.txt
+++ b/source/Irrlicht/CMakeLists.txt
@@ -313,7 +313,7 @@ set(link_libs
 	"${ZLIB_LIBRARY}"
 	"${JPEG_LIBRARY}"
 	"${PNG_LIBRARY}"
-	"$<$<BOOL:${USE_SDL2}>:${SDL2_LIBRARIES}>"
+	"$<$<BOOL:${USE_SDL2}>:SDL2::SDL2>"
 
 	${OPENGL_LIBRARIES}
 	${OPENGLES_LIBRARY}
